--- a/skaifeme/sites/all/themes/responsive/style.css
+++ b/skaifeme/sites/all/themes/responsive/style.css
@@ -525,8 +525,7 @@ ul.social li {
 }
 
 .submitted {
-  background: #dfdddd;
-  padding: 4px 9px;
+  padding: 0px 0px 5px 0px;
   border-radius: 4px;
   color: #383838;
   text-shadow: 1px 1px #fff;
@@ -542,12 +541,11 @@ ul.social li {
 }
 
 .links li a {
-  background-color: #E7E5E3;
-  color: #100100;
-  padding: 4px 5px;
+  color: #1c6ea0;
   border-radius: 4px;
   text-shadow: 1px 1px #fff;
   font-weight: normal;
+    text-decoration: underline;
 }
 
 .links li a:hover {
